Revision history for Perl extension SVG::TT::Graph.

0.16 - Sun Apr 18 2010
  - Javascript code in the piechart and timeseries put into a CDATA tag

0.15 - Sat Apr 17 2010  
  - Method get_template() moved from SVG::TT::Graph::* to SVG::TT::Graph to avoid redundancy
  - Fixed bug in get_template(). The DATA filehandle is now read from the beginning
    at each get_template call
  - Makefile.PL does not use autoinstall aymore (not a good practice for CPAN modules)
  - Rollover improvements in piechart

0.14 - Mon Apr 05 2010
  - Fixed some unit tests and the URL of the repository

0.13 - Sat Apr 03 2010
  - Revised TT templates warnings due to undef values (bug # 44115)
  - Fixed the "used only once" warnings (bug # 43854, thank you Ia Hun)
  - Introduced a new method to use random colors instead of the 12 predefined
    colors. Along with the dynamic allocation of the number of style elements,
    this allows an unlimited number of dataseries
  - Added Javascript code to display field name when the mouse rolls over a
    piechart wedge
  - Implemented an optional new method to tidy the formatting of the SVG files
    (using XML::Tidy)
  - Replaced carriage returns by line feeds because it is more portable
    (http://www.webmasterworld.com/forum13/4067.htm)
  - Did documentation, unit testing and packaging revisions
  - Misc little code touch ups

0.12 - Mon Feb 16 12:00:00 EST 2009
  -  Missed updating the versions for some of the sub libraries.

0.11 - Sun Feb 15 22:54:00 EST 2009
  - Applied patches:
    http://rt.cpan.org/Ticket/Display.html?id=38441 - Ampersands in Fields cause XML error
    http://rt.cpan.org/Ticket/Display.html?id=43326 - Multiple data sets in Bar.pm will now show stacked graphs
    http://rt.cpan.org/Ticket/Display.html?id=43325 - Allow toggling the display of data on TimeSeries

0.10 - Mon Apr 28 21:07:30 BST 2008
  - Applied patches:
    http://rt.cpan.org/Ticket/Display.html?id=34491
    http://rt.cpan.org/Ticket/Display.html?id=22896