@@ -1,5 +1,8 @@
 Revision history for Perl extension SVG::TT::Graph.
 
+0.xx
+  - By default, do not compress() or tidy() the SVG
+
 0.16 - Sun Apr 18 2010
   - Javascript code in the piechart and timeseries put into a CDATA tag
 
